--- a/password_checker_site/password_checker_app/templates/index.html
+++ b/password_checker_site/password_checker_app/templates/index.html
@@ -22,7 +22,7 @@
         <p><b>Online w/ Throttling</b>: <i>{{ online_throttling }}</i></p>
         <p><b>Online w/ No Throttling</b>: <i>{{ online_no_throttling }}</i></p>
         <p><b>Offline Slow Hashing</b>: <i>{{ offline_slow_hash }}</i></p>
-        <p><b>Offline Fast Hashing Attack</b>: <i>{{ offline_fast_hash }}</i></p>
+        <p><b>Offline Fast Hashing</b>: <i>{{ offline_fast_hash }}</i></p>
         {% endif %}
     </body>
 </html>
